tests/invalid_types/duplicate_fun.hk

fun bad() I32{
    return 12;
}


fun bad() I32{
    return 12;
}


fun main() I32{
    return bad;
}

#[
<fail>
]#